fix : fix design

--- a/public/content/blog/01.programmers_famous_saying.mdx
+++ b/public/content/blog/01.programmers_famous_saying.mdx
@@ -1,7 +1,7 @@
 ---
 title: 프로그래머 명언 모음
 description: 마인드 셋용
-bg: /content/blog/image/01/bg.png
+cover: /content/blog/image/01/cover.png
 createdAt: 2023-10-14
 ---
 
