--- a/public/content/blog/20230802_01.mdx
+++ b/public/content/blog/20230802_01.mdx
@@ -1,8 +1,9 @@
 ---
 title: aws 공인 개발자 어소시에이트
 description: 초기 테스트용 데이터
-bg: /content/blog/image/01/bg.png
+cover: /content/blog/image/01/cover.png
 createdAt: 2023-10-14
+published: false
 ---
 
 ## AWS 계정 만들기
