--- a/public/content/blog/middleware.mdx
+++ b/public/content/blog/middleware.mdx
@@ -1,7 +1,7 @@
 ---
 title: Aws 개요
 description: 이제부터 친해져야할 서비스들.. ㅎㅇ
-bg: /content/blog/image/01/bg.png
+cover: /content/blog/image/01/cover.png
 createdAt: 2023-10-14
 ---
 
