--- a/public/content/blog/mdx-test.mdx
+++ b/public/content/blog/mdx-test.mdx
@@ -1,7 +1,7 @@
 ---
 title: 마크다운 테스트
 description: 초기 테스트용 데이터
-bg: /content/blog/image/01/bg.png
+cover: /content/blog/image/01/cover.png
 createdAt: 2023-10-14
 ---
 
